<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Scores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league">UEFA Champions League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="premierleague">Premier League</string>
    <string name="primeradivison">Primera Division</string>
    <string name="seriaa">Serie A</string>
    <string name="matchday_text">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text">This is a widget probably.</string>
    <string name="dummy_data"  translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>
    <string name="api_key" translatable="false">c71dbc22b92443d699084a86e6d66715</string>
    <string name="appwidget_text">Loading...</string>
    <string name="add_widget">Add widget</string>
    <string name="scores_widget_title">Futbol Scores</string>
    <string name="score_format" formatted="false">%s - %s</string>
    <string name="hashtag">#Football_Scores</string>
    <string name="league_seria_a">Seria A</string>
    <string name="league_premier_league">Premier League</string>
    <string name="league_champions_league">UEFA Champions League</string>
    <string name="league_premera_division">Primera Division</string>
    <string name="league_bundesliga">Bundesliga</string>
    <string name="league_unknown">Not known League Please report</string>
    <string name="group_stages_matchday">Group Stages, Matchday : 6</string>
    <string name="cd_home_team_score">Home team score</string>
    <string name="cd_home_team_name">Home team name</string>
    <string name="cd_match_date_time">Match date and time</string>
    <string name="cd_away_team_name">Away team name</string>
    <string name="cd_away_team_score">Away team score</string>
    <string name="no_matches_today">No matches today</string>
    <string name="widget_header_test_text">2015-10-24 05:00</string>
    <string name="widget_preview_home_team_test_text">Stuttgarter Kickers</string>
    <string name="widget_preview_away_team_test_text">Wumblrburger Kickers</string>
    <string name="contentDescription_shareMatchInfo">Share match information</string>
    <string name="contentDescription_home_crest_image">Home crest image</string>
    <string name="contentDescription_away_crest_image">Away crest image</string>

</resources>
